Fixes T343
Summary:
* fixes T343
	* modal width layout bug on large screens

Test Plan: view modal on extra large screens

Reviewers: rjmackay, shadowhand

Reviewed By: shadowhand

Subscribers: dkobia

Maniphest Tasks: T343

Differential Revision: https://phabricator.ushahidi.com/D170

--- a/modules/UshahidiUI/media/scss/modules/modals/_modal.scss
+++ b/modules/UshahidiUI/media/scss/modules/modals/_modal.scss
@@ -27,6 +27,14 @@
 		display: block;
 	}
 }
+
+.modal.medium {
+	@media #{$large-up} {
+		margin-left: -25%;
+		width: 50%;
+	}
+}
+
 #modal-bg {
 	@include reveal-bg;
 	body.modal-active & {
@@ -74,4 +82,3 @@
 		margin-bottom: 0;
 	}
 }
-
